Address PR comments

--- a/src/Elastic.Apm/Elastic.Apm.csproj
+++ b/src/Elastic.Apm/Elastic.Apm.csproj
@@ -2,7 +2,6 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <IsPackable>true</IsPackable>
-    <UseDiagnosticSourceVersionFour>false</UseDiagnosticSourceVersionFour>
   </PropertyGroup>
   <PropertyGroup>
     <RootNamespace>Elastic.Apm</RootNamespace>
@@ -15,11 +14,15 @@
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="4.5.0" />
   </ItemGroup>
-  <ItemGroup Condition="'$(UseDiagnosticSourceVersionFour)' == 'false'">
+  <ItemGroup Condition="'$(DiagnosticSourceVersion)' == ''">
     <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="5.0.0" />
   </ItemGroup>
-  <ItemGroup Condition="'$(UseDiagnosticSourceVersionFour)' == 'true'">
-    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="4.6.0" />
+  <!-- DiagnosticSourceVersion MsBuild property can be used to compile the agent against a specific version of
+       System.Diagnostics.DiagnosticSource. Used when creating the ElasticApmAgentStartupHook zip file to
+       compile multiple versions of the agent.
+   -->
+  <ItemGroup Condition="'$(DiagnosticSourceVersion)' != ''">
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="$(DiagnosticSourceVersion)" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Diagnostics.Tracing.TraceEvent" Version="2.0.2" />
