StartupHook: remove check on Microsoft.AspNetCore assemblies

--- a/src/Elastic.Apm.StartupHook.Loader/Elastic.Apm.StartupHook.Loader.csproj
+++ b/src/Elastic.Apm.StartupHook.Loader/Elastic.Apm.StartupHook.Loader.csproj
@@ -14,4 +14,6 @@
       <ProjectReference Include="..\Elastic.Apm\Elastic.Apm.csproj" />
     </ItemGroup>
 
+    <Import Project="..\Elastic.Apm.StartupHook.Common\Elastic.Apm.StartupHook.Common.projitems" Label="Shared" />
+
 </Project>
