--- a/src/ElasticApmAgentStartupHook/ElasticApmAgentStartupHook.csproj
+++ b/src/ElasticApmAgentStartupHook/ElasticApmAgentStartupHook.csproj
@@ -5,4 +5,5 @@
     <IsPackable>false</IsPackable>
     <RootNamespace>ElasticApmStartupHook</RootNamespace>
   </PropertyGroup>
+  <Import Project="..\Elastic.Apm.StartupHook.Common\Elastic.Apm.StartupHook.Common.projitems" Label="Shared" />
 </Project>
