Remove coverlet.msbuild (#1140)
This commit removes coverlet.msbuild from
windows CI. Coverage on Windows is collected
with coverlet.collector.

* Build in Release
* Don't let xunit use AppDomains
  See https://github.com/coverlet-coverage/coverlet/issues/347
* disable test parallelization
* Don't add coverlet.collector for net461
* Remove tests for netcoreapp2.2
* Update JunitXml.TestLogger and coverlet.collector

--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -19,16 +19,11 @@
   </ItemGroup>
   
   <ItemGroup>
-    <!-- Add coverlet MSBuild only for Windows -->
-    <PackageReference Include="coverlet.msbuild" Version="2.9.0" Condition="'$(IsTestProject)' == 'true' AND '$(OS)' == 'WINDOWS_NT'">
+    <!-- Add coverlet collector for all platforms and frameworks, except net461 -->
+    <PackageReference Include="coverlet.collector" Version="3.0.2" Condition="'$(IsTestProject)' == 'true' AND '$(TargetFramework)' != 'net461'">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <!-- Add coverlet collector for all platforms -->
-    <PackageReference Include="coverlet.collector" Version="1.3.0" Condition="'$(IsTestProject)' == 'true'">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="JunitXml.TestLogger" Version="2.1.78" Condition="'$(IsTestProject)' == 'true'" />
+    <PackageReference Include="JunitXml.TestLogger" Version="2.1.81" Condition="'$(IsTestProject)' == 'true'" />
   </ItemGroup>
 </Project>
