Add support for self signed certs
This commit adds support for communicating with APM server
that has been configured with a certificate to use for
SSL/TLS that is not in the trust store.

A path can be specified with `ElasticApm:ServerCert` to
a PEM encoded certificate used to secure APM server. A
`ServerCertificateCustomValidationCallback` is configured
on `HttpClientHandler` of the client used to communicate with
APM server that validates the certificate through public
key pinning.

Add integration tests for ServerCert and VerifyServerCert.
Extend Mock APM server to support HTTPS configuration
with a specified certificate.

Closes #1171

--- a/test/Elastic.Apm.Tests.MockApmServer/Elastic.Apm.Tests.MockApmServer.csproj
+++ b/test/Elastic.Apm.Tests.MockApmServer/Elastic.Apm.Tests.MockApmServer.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Elastic.Apm.Tests.Utilities\Elastic.Apm.Tests.Utilities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="cert.pfx" />
+  </ItemGroup>
+
 </Project>
