CaptureApmErrorsTests cover scopes and move to separate project

--- a/sample/SampleConsoleNetCoreApp/appsettings.json
+++ b/sample/SampleConsoleNetCoreApp/appsettings.json
@@ -6,7 +6,12 @@
       "Microsoft": "Information"
     }
   },
+
   "ElasticApm": {
     "ServerUrls": "http://localhost:8200"
+  },
+
+  "Console": {
+    "IncludeScopes": true // Required to use Scopes.
   }
 }
