Get transaction name from Web API controller route template
This commit updates ElasticApmModule to get the transaction
name for a Web API controller routed with attribute routing
from the "MS_SubRoutes" route data value.

A delegate to get the template from IHttpRouteData when
System.Web.Http is referenced.

Closes #1176

--- a/sample/AspNetFullFrameworkSampleApp/AspNetFullFrameworkSampleApp.csproj
+++ b/sample/AspNetFullFrameworkSampleApp/AspNetFullFrameworkSampleApp.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Mvc\JsonBadRequestResult.cs" />
     <Compile Include="Mvc\JsonNetValueProviderFactory.cs" />
     <Compile Include="Mvc\StreamResult.cs" />
+    <Compile Include="Controllers\AttributeRoutingWebApiController.cs" />
   </ItemGroup>
   <ItemGroup Condition="'$(OS)' == 'WINDOWS_NT'">
     <Content Include="Content\bootstrap-grid.css" />
