Move InternalsVisibleTo into project files
This commit moves the usage of the InternalsVisibleTo into project files.
The exception is AspNetFullFrameworkSampleApp, which uses the
older project file format.

--- a/src/Elastic.Apm.AspNetFullFramework/Elastic.Apm.AspNetFullFramework.csproj
+++ b/src/Elastic.Apm.AspNetFullFramework/Elastic.Apm.AspNetFullFramework.csproj
@@ -8,6 +8,11 @@
     <PackageTags>apm, monitoring, elastic, elasticapm, analytics, aspnet</PackageTags>
     <IsPackable>true</IsPackable>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <InternalsVisibleTo Include="Elastic.Apm.AspNetFullFramework.Tests" Key="$(ExposedPublicKey)" />
+  </ItemGroup>
+  
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
