--- a/src/Elastic.Apm.GrpcClient/Elastic.Apm.GrpcClient.csproj
+++ b/src/Elastic.Apm.GrpcClient/Elastic.Apm.GrpcClient.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="Elastic.Apm.Grpc.Tests" Key="$(ExposedPublicKey)" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <ProjectReference Include="..\Elastic.Apm\Elastic.Apm.csproj" />
   </ItemGroup>
 
