--- a/test/Elastic.Apm.Feature.Tests/Elastic.Apm.Feature.Tests.csproj
+++ b/test/Elastic.Apm.Feature.Tests/Elastic.Apm.Feature.Tests.csproj
@@ -15,7 +15,8 @@
     </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Elastic.Apm.Tests.Utilities\Elastic.Apm.Tests.Utilities.csproj"/>
+    <ProjectReference Include="..\..\src\Elastic.Apm.AspNetCore\Elastic.Apm.AspNetCore.csproj" />
+    <ProjectReference Include="..\Elastic.Apm.Tests.Utilities\Elastic.Apm.Tests.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
