--- a/test/Elastic.Apm.MongoDb.Tests/Elastic.Apm.MongoDb.Tests.csproj
+++ b/test/Elastic.Apm.MongoDb.Tests/Elastic.Apm.MongoDb.Tests.csproj
@@ -1,8 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <IsPackable>false</IsPackable>
-    <TargetFrameworks>net461;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,7 +8,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.4.4" />
     <PackageReference Include="Moq" Version="4.15.2" />
-    <PackageReference Include="TestEnvironment.Docker" Version="1.3.8" />
+    <PackageReference Include="TestEnvironment.Docker" Version="1.3.9" />
+    <PackageReference Include="TestEnvironment.Docker.Containers.Mongo" Version="1.2.2" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
@@ -22,6 +21,4 @@
     <ProjectReference Include="..\..\src\Elastic.Apm\Elastic.Apm.csproj" />
     <ProjectReference Include="..\Elastic.Apm.Tests.Utilities\Elastic.Apm.Tests.Utilities.csproj" />
   </ItemGroup>
-
-  
 </Project>
