--- a/src/Elastic.Apm.MongoDb/Elastic.Apm.MongoDb.csproj
+++ b/src/Elastic.Apm.MongoDb/Elastic.Apm.MongoDb.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <RootNamespace>Elastic.Apm.MongoDb</RootNamespace>
     <AssemblyName>Elastic.Apm.MongoDb</AssemblyName>
     <PackageId>Elastic.Apm.MongoDb</PackageId>
