--- a/test/Elastic.Apm.Tests.Utilities/Elastic.Apm.Tests.Utilities.csproj
+++ b/test/Elastic.Apm.Tests.Utilities/Elastic.Apm.Tests.Utilities.csproj
@@ -24,9 +24,11 @@
       <InternalsVisibleTo Include="Elastic.Apm.Extensions.Hosting.Tests" Key="$(ExposedPublicKey)" />
       <InternalsVisibleTo Include="Elastic.Apm.Extensions.Logging.Tests" Key="$(ExposedPublicKey)" />
       <InternalsVisibleTo Include="Elastic.Apm.Azure.ServiceBus.Tests" Key="$(ExposedPublicKey)" />
+      <InternalsVisibleTo Include="Elastic.Apm.Azure.Storage.Tests" Key="$(ExposedPublicKey)" />
     </ItemGroup>
   
     <ItemGroup>
+      <PackageReference Include="Proc" Version="0.6.2" />
       <PackageReference Include="FluentAssertions" Version="5.6.0" />
       <PackageReference Include="Moq" Version="4.12.0" />
       <PackageReference Include="RichardSzalay.MockHttp" Version="6.0.0" />
