--- a/sample/HttpListenerSample/HttpListenerSample.csproj
+++ b/sample/HttpListenerSample/HttpListenerSample.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\..\src\Elastic.Apm\Elastic.Apm.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
