Extract service bus related values out to constants

--- a/src/Elastic.Apm.Azure.ServiceBus/Elastic.Apm.Azure.ServiceBus.csproj
+++ b/src/Elastic.Apm.Azure.ServiceBus/Elastic.Apm.Azure.ServiceBus.csproj
@@ -12,6 +12,10 @@
     </PropertyGroup>
   
     <ItemGroup>
+      <InternalsVisibleTo Include="Elastic.Apm.Azure.ServiceBus.Tests" Key="$(ExposedPublicKey)" />
+    </ItemGroup>
+  
+    <ItemGroup>
       <ProjectReference Include="..\Elastic.Apm\Elastic.Apm.csproj" />
     </ItemGroup>
 
