--- a/test/Elastic.Apm.Feature.Tests/Elastic.Apm.Feature.Tests.csproj
+++ b/test/Elastic.Apm.Feature.Tests/Elastic.Apm.Feature.Tests.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="5.6.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
+        <PackageReference Include="RichardSzalay.MockHttp" Version="6.0.0" />
         <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.5.5" />
         <PackageReference Include="SpecFlow.xUnit" Version="3.5.5" />
         <PackageReference Include="xunit" Version="2.4.1" />
