--- a/src/Elastic.Apm.Azure.Storage/Elastic.Apm.Azure.Storage.csproj
+++ b/src/Elastic.Apm.Azure.Storage/Elastic.Apm.Azure.Storage.csproj
@@ -6,8 +6,7 @@
       <AssemblyName>Elastic.Apm.Azure.Storage</AssemblyName>
       <RootNamespace>Elastic.Apm.Azure.Storage</RootNamespace>
       <PackageId>Elastic.Apm.Azure.Storage</PackageId>
-      <Description>Elastic APM for Azure Storage. This package contains auto instrumentation for Azure.Storage.Queues,
-        and Azure.Storage.Blobs packages.</Description>
+      <Description>Elastic APM for Azure Storage. This package contains auto instrumentation for Azure.Storage.Queues, Azure.Storage.Blobs and Azure.Storage.Files.Shares packages.</Description>
       <PackageTags>apm, monitoring, elastic, elasticapm, analytics, azure, storage, queue, blob</PackageTags>
       <IsPackable>true</IsPackable>
     </PropertyGroup>
