Add breakdown metrics - heavily WIP

--- a/sample/SampleAspNetCoreApp/appsettings.json
+++ b/sample/SampleAspNetCoreApp/appsettings.json
@@ -2,7 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
-      "Elastic.Apm": "Error"
+      "Elastic.Apm": "Debug"
     }
   },
   "AllowedHosts": "*",
