Revert "Update dotnet sdk 5.0 docker image (#1149)"
This reverts commit 03d963c61aa03344d2169f9b5912b226de39c01e.

--- a/.ci/docker/sdk-linux/Dockerfile
+++ b/.ci/docker/sdk-linux/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/sdk:5.0.102-ca-patch-buster-slim
+FROM mcr.microsoft.com/dotnet/sdk:5.0
 
 ENV DOTNET_ROOT=/usr/share/dotnet
 ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:${DOTNET_ROOT}/tools:${DOTNET_ROOT}
