--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -30,12 +30,7 @@
       <PackagePath>.</PackagePath>
     </None>
     <!-- Include the license referenced by <PackageLicenseFile> in the package -->
-    <None Include="$(SolutionRoot)/LICENSE">
-      <Pack>True</Pack>
-      <PackagePath>.</PackagePath>
-    </None>
-    <!-- Includes NOTICE -->
-    <None Include="$(SolutionRoot)/NOTICE">
+    <None Include="$(SolutionRoot)/LICENSE" Condition="!Exists('LICENSE_LOCAL')">
       <Pack>True</Pack>
       <PackagePath>.</PackagePath>
     </None>
