--- a/test/Elastic.Apm.MongoDb.Tests/Elastic.Apm.MongoDb.Tests.csproj
+++ b/test/Elastic.Apm.MongoDb.Tests/Elastic.Apm.MongoDb.Tests.csproj
@@ -4,15 +4,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.msbuild" Version="2.9.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.4.4" />
-    <PackageReference Include="TestEnvironment.Docker" Version="1.3.9" />
-    <PackageReference Include="TestEnvironment.Docker.Containers.Mongo" Version="1.2.2" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
     <PackageReference Include="FluentAssertions.Analyzers" Version="0.11.4" />
+    <PackageReference Include="DotNet.Testcontainers" Version="1.4.0" />
   </ItemGroup>
 
   <ItemGroup>
