--- a/test/Elastic.Apm.Elasticsearch.Tests/Elastic.Apm.Elasticsearch.Tests.csproj
+++ b/test/Elastic.Apm.Elasticsearch.Tests/Elastic.Apm.Elasticsearch.Tests.csproj
@@ -17,7 +17,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="2.1.0" />
     <PackageReference Include="Elasticsearch.Net.VirtualizedCluster" Version="7.6.1" />
-
+    <PackageReference Include="DotNet.Testcontainers" Version="1.0.0" />
+    <!-- Strong name any assemblies that aren't i.e. DotNet.Testcontainers -->
+    <PackageReference Include="StrongNamer" Version="0.2.5" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
   <ItemGroup>
