--- a/src/Elastic.Apm.Specification/Elastic.Apm.Specification.csproj
+++ b/src/Elastic.Apm.Specification/Elastic.Apm.Specification.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+      <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+      <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
