--- a/.ci/jobs/defaults.yml
+++ b/.ci/jobs/defaults.yml
@@ -20,7 +20,7 @@
     script-path: Jenkinsfile
     scm:
     - github:
-        branch-discovery: all
+        branch-discovery: no-pr
         discover-pr-forks-strategy: merge-current
         discover-pr-forks-trust: permission
         discover-pr-origin: merge-current
@@ -43,7 +43,7 @@
           before: true
         prune: true
         shallow-clone: true
-        depth: 3
+        depth: 10
         do-not-fetch-tags: true
         submodule:
           disable: false
@@ -53,7 +53,6 @@
         timeout: '15'
         use-author: true
         wipe-workspace: 'True'
-    periodic-folder-trigger: 1d
     prune-dead-branches: true
     publishers:
     - email:
