--- a/Makefile.toml
+++ b/Makefile.toml
@@ -4,9 +4,12 @@ default_to_workspace = false
 [env]
 DOTNET_VERSION = "netcoreapp3.1"
 DOTNET_CONFIG = "Debug"
-RUST_LOG = { value = "info", condition = { env_not_set = ["RUST_LOG"] } }
+RUST_LOG = { value = "debug", condition = { env_not_set = ["RUST_LOG"] } }
 CORECLR_ENABLE_PROFILING = { value = "1", condition = { env_not_set = ["CORECLR_ENABLE_PROFILING"] } }
 CORECLR_PROFILER = { value = "{FA65FE15-F085-4681-9B20-95E04F6C03CC}", condition = { env_not_set = ["CORECLR_PROFILER"] } }
+ELASTIC_APM_PROFILER_HOME = { value = "${CARGO_MAKE_WORKING_DIRECTORY}/src/Elastic.Apm.Profiler.Managed/bin/Release", condition = { env_not_set = ["ELASTIC_APM_PROFILER_HOME"] } }
+ELASTIC_APM_PROFILER_INTEGRATIONS = { value = "${CARGO_MAKE_WORKING_DIRECTORY}/src/Elastic.Apm.Profiler.Managed/integrations.json", condition = { env_not_set = ["ELASTIC_APM_PROFILER_INTEGRATIONS"] } }
+ELASTIC_APM_PROFILER_CALLTARGET_ENABLED = { value = "false", condition = { env_not_set = "ELASTIC_APM_PROFILER_CALLTARGET_ENABLED" } }
 
 [tasks.build-profiler]
 description = "Builds CLR Profiler"
@@ -23,9 +26,14 @@ description = "Builds .NET loader"
 command = "dotnet"
 args = ["build", "-c", "Release", "./src/Elastic.Apm.Profiler.Managed.Loader/Elastic.Apm.Profiler.Managed.Loader.csproj"]
 
+[tasks.build-integrations]
+description = "Builds .NET integrations"
+command = "dotnet"
+args = ["build", "-c", "Release", "./src/Elastic.Apm.Profiler.Managed/Elastic.Apm.Profiler.Managed.csproj"]
+
 [tasks.build]
 clear = true
-dependencies = ["build-loader", "build-profiler", "build-dotnet"]
+dependencies = ["build-loader", "build-integrations", "build-profiler", "build-dotnet"]
 
 [tasks.expand]
 clear = true
