--- a/sample/Example/Example.csproj
+++ b/sample/Example/Example.csproj
@@ -4,5 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFrameworks>net5.0;netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
-
+  
+  <ItemGroup>
+    <PackageReference Include="Elasticsearch.Net" Version="6.8.8" />
+  </ItemGroup>
 </Project>
